# test-tilt-energy

./: .env  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: crud.py  database.py  logic.py  main.py  models.py  schemas.py  test_logic.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  package.json
frontend/src/: app.html
frontend/src/lib/: schema.ts  utils.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/[id]/: +page.server.ts  +page.svelte
