[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Florian Stasse", email = "florian.stasse@proton.me"},
]
dependencies = [
    "starlette>=0.37.2",
    "pydantic>=2.7.4",
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.31",
    "uvicorn>=0.30.1",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
